# beacon-code

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  build-fast.sh  cliff.toml  config.toml.example  flake.nix  justfile  package.json
.devcontainer/: README.md
.github/: dependabot.yaml  dotslash-config.json  merge-policy.json
beacon-cli/: Dockerfile  package-lock.json  package.json  postinstall.js
code-rs/: Cargo.toml  MIGRATION_GUIDE.md  MIGRATION_QUICK_REFERENCE.md  README.md  config.md  default.nix  deny.toml  justfile  migrate-crate.sh
code-rs/mcp-types/: Cargo.toml  generate_mcp_types.py
code-rs/mcp-types/src/: lib.rs
codex-cli/: Dockerfile  checksums.json  package.json  postinstall.js
codex-rs/: Cargo.toml  README.md  default.nix
docs/: HOMEBREW.md  advanced.md  agents.md  agents_md.md  architecture.md  authentication.md  auto-drive-validation.md  auto-drive.md  command-reference.md  config.md  contributing.md  core-usage.md  dev-test-checklist.md  env-vars.md  example-config.md  exec.md  execpolicy.md  faq.md  getting-started.md  index.md  install.md  integration-zed.md  production_checklist.md  prompts.md  sandbox.md  settings.md  skills.md  slash-commands.md  slash_commands.md  upstream-sync.md
scripts/: bootstrap.py  bootstrap.sh  check-release-notes-version.sh  check-upstream-path-deps.sh  code-cleanup-branches  code-home-backup.sh  generate-homebrew-formula.sh  install.json  install.ps1  install.py  install.sh  openai-proxy.js  prod_ready_sweep.sh  stage_npm_packages.py  upstream-sync.sh
shell-tool-mcp/: README.md  package.json
(+541 files in other folders)
