[package]
name = "code-mcp-types"
version = { workspace = true }
edition = "2024"

[lib]
name = "mcp_types"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, features = ["serde-json-impl", "no-serde-warnings"] }

[dev-dependencies]
serde_json = { workspace = true }
